# NaiveChainCpp

./: CMakeLists.txt  README.md  vcpkg.json
include/: block.hpp  blockchain.hpp
src/: block.cpp  blockchain.cpp
test/: test_block.cpp  test_blockchain.cpp
tools/node/: blockchain_window.cpp  blockchain_window.hpp  main.cpp  node.cpp  node.hpp  window.cpp  window.hpp
